fix hero on mobile-2

--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -6,7 +6,7 @@
   background-position: center;
   background-repeat: no-repeat;
   @media (max-width: 756px) {
-    height: 936px;
+    height: 836px;
   }
 }
 .product-section {
